--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <div id="container"></div>
     
     <div id="fb-root" class=" fb_reset"><div style="position: absolute; top: -10000px; height: 0px; width: 0px;"><div></div></div></div>
-    <script type="text/javascript" src="coupon.json"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="coupon.json"></script>
+    <script src="script.js"></script>
     <script>
-        new Coupon(document.getElementById('container'));   
+        new Coupon({
+            id: 'tab1',
+            containerElement: document.getElementById('container'),
+            componentData: coupon
+        });
     </script>
-    <script src="http://connect.facebook.net/en_US/all.js"></script>
 </body>
 </html>
